--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
 
   publish:
     needs: test
+    if: github.event.release.prerelease == false
     runs-on: ubuntu-latest
     
     steps:
